2014-01-09  Albert Chu <chu11@llnl.gov>

	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
	Windmill.  Motherboard is Intel Windmill on all of them.
	
2014-01-08  Albert Chu <chu11@llnl.gov>

	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
	Windmill.  Motherboard in use was previously misidentified.
	
2014-01-07  Albert Chu <chu11@llnl.gov>

	Add DCMI configuration support in ipmi-config.

	* ipmi-config/: Add basic DCMI configuration support.

	* man/: Add appropriately DCMI config subsections to manpages.

	* libfreeipmi/: Fix various corner cases.

	* ipmi-config/, ipmi-sensors/: Fix various corner cases for Quanta
	Winterfell motherboard.

	* man/: Document workarounds.
	
2014-01-03  Albert Chu <chu11@llnl.gov>

	* Update copyright globally.
	
2014-01-03  Albert Chu <chu11@llnl.gov>

	* ipmi-dcmi/, man/, ipmi-config/: Fix various English and typos.
	
2013-12-20  Albert Chu <chu11@llnl.gov>

	Add 'inteldcmi' inband driver.

	* libfreeipmi/: Add support for "inteldcmi" in-band driver.

	* README, doc/, man/: Add documentation for inteldcmi driver.
	
2013-12-20  Albert Chu <chu11@llnl.gov>

	* man/freeipmi.7.pre.in, README: Fix some English.

	* man/libfreeipmi.3.pre.in: Add forgotten driver.

2013-12-19  Dave Love  <fx@gnu.org>

	* ipmi-sensors/ipmi-sensors.c (_calculate_record_ids): Check
	record number against array length.

	* common/toolcommon/tool-sensor-common.h (MAX_SENSOR_RECORD_IDS):
	Increase to 1024.

2013-12-12  Albert Chu <chu11@llnl.gov>

	* bmc-info/: Support 'guidformat' workaround flag.

	* bmc-info/: Fix default GUID output format, one field appears to
	be output incorrectly.
	
2013-12-12  Albert Chu <chu11@llnl.gov>

	* bmc-info/: Support output of System GUID by default and support
	--get-system-guid option.
	
2013-12-12  Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Decimal values that cannot be encoded accurately
	now report a clearer error message through the