@@ -143,6 +143,8 @@ extern "C" {
 
 #define IPMI_INTEL_PRODUCT_ID_S5000PAL 40
 
+#define IPMI_INTEL_PRODUCT_ID_WINDMILL 2818
+
 /* 
  * Intel derived
  */
@@ -154,6 +156,10 @@ extern "C" {
 #define IPMI_APPRO_PRODUCT_ID_512X IPMI_INTEL_PRODUCT_ID_S2600JF
 
 #define IPMI_APPRO_PRODUCT_ID_QG812X_CN IPMI_INTEL_PRODUCT_ID_QUANTA_QSSC_S4R
+
+#define IPMI_QUANTA_PRODUCT_ID_WINTERFELL IPMI_INTEL_PRODUCT_ID_WINDMILL
+
+#define IPMI_WIWYNN_PRODUCT_ID_WINDMILL IPMI_INTEL_PRODUCT_ID_WINDMILL
 
 /*******************************************
  * IBM                                     *
