@@ -1,3 +1,7 @@
+2014-01-13  Albert Chu <chu11@llnl.gov>
+
+	* Support OEM events for Intel Windmill motherboards.
+	
 2014-01-09  Albert Chu <chu11@llnl.gov>
 
 	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
